#/***********************************************************************
#**
#** $Id: Makefile.am,v 1.1 2001/03/14 02:31:06 saturn_de Exp $
#**
#**	This program is free software; you can redistribute it and/or
#**	modify it under the terms of the GNU General Public License
#**	as published by the Free Software Foundation; either version
#**	2 of the License, or (at your option) any later version.
#**
#** (C) 1999,2000 Harald Hoyer <DLDialog@parzelle.de> 
#**
#***********************************************************************/
AUTOMAKE_OPTIONS = gnu 

SUBDIRS =  intl src po perl tests 
dnl SUBDIRS =  intl doc src po perl tests 

EXTRA_DIST = README.developer dldialog.spec README.QT

docdir = $(prefix)/doc/dldialog-@VERSION@

doc_DATA = AUTHORS COPYING ChangeLog INSTALL TODO NEWS README README.QT 
