#/***********************************************************************
#**
#** $Id: Makefile.am,v 1.2 2002/04/04 15:25:24 saturn_de Exp $
#**
#**	This program is free software; you can redistribute it and/or
#**	modify it under the terms of the GNU General Public License
#**	as published by the Free Software Foundation; either version
#**	2 of the License, or (at your option) any later version.
#**
#** by Harald Hoyer (dldialog@parzelle.de) 
#** Copyright (C) 1998-2002 Harald Hoyer <DLDialog@parzelle.de> - All rights reserved -
#**
#***********************************************************************/

SUBDIRS = doc

EXTRA_DIST = DlButton.pm DlButtonGroup.pm DlCheckList.pm DlComboBox.pm \
             DlDialog.pm DlFileSelect.pm DlHelp.pm DlInputField.pm \
             DlList.pm DlMessage.pm DlRadioList.pm DlWizzard.pm \
             DlWidgetGroup.pm dldialog.pm I18n.pm test.dl test.hlp

perl_DATA =  DlButton.pm DlButtonGroup.pm DlCheckList.pm DlComboBox.pm \
             DlDialog.pm DlFileSelect.pm DlHelp.pm DlInputField.pm \
	     DlList.pm DlMessage.pm DlRadioList.pm DlWizzard.pm \
             DlWidgetGroup.pm dldialog.pm I18n.pm

perldir = $(prefix)/lib/perl5/site_perl
