#/*****************************************************************************
#**
#** $Id: Makefile.am,v 1.2 2002/04/04 15:25:24 saturn_de Exp $
#**
#**	This program is free software; you can redistribute it and/or
#**	modify it under the terms of the GNU General Public License
#**	as published by the Free Software Foundation; either version
#**	2 of the License, or (at your option) any later version.
#**
#** by Harald Hoyer (dldialog@parzelle.de) 
#** Copyright (C) 1998-2002 Harald Hoyer <DLDialog@parzelle.de> - All rights reserved -
#**
#*****************************************************************************/


EXTRA_DIST = DlDialog.html DlDialog.pod DlDialog.tex

perl_DATA = DlDialog.pod

perldir = $(prefix)/lib/perl5/site_perl


doc_DATA = DlDialog.html DlDialog.tex

docdir = $(prefix)/doc/dldialog-@VERSION@/perlmodules
