#/*****************************************************************************
#**
#** $Id: Makefile.am,v 1.1 2001/03/14 02:33:07 saturn_de Exp $
#**
#**	This program is free software; you can redistribute it and/or
#**	modify it under the terms of the GNU General Public License
#**	as published by the Free Software Foundation; either version
#**	2 of the License, or (at your option) any later version.
#**
#**
#*****************************************************************************/
lib_LTLIBRARIES = libdld_gen.la

libdld_gen_la_SOURCES =	dld_lib.cc dld_gengui.h
libdld_gen_la_LDFLAGS = -export-dynamic -version-info @GUI_VERSION_INFO@ 

